--- a/SailsTest/package.json
+++ b/SailsTest/package.json
@@ -1,14 +1,14 @@
 {
     "name": "SailsTest",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.0.1",
     "description": "a Sails application",
     "dependencies": {
-        "sails": "0.9.8",
-        "grunt": "0.4.1",
-        "sails-disk": "~0.9.0",
-        "ejs": "0.8.4",
-        "optimist": "0.3.4"
+        "grunt": "0.4.x",
+        "optimist": "0.6.x",
+        "sails": "0.10.x",
+        "sails-disk": "0.10.x",
+        "sails-postgresql": "0.10.x"
     },
     "scripts": {
         "start": "node app.js",
